--- a/S10.03-Exercise-FirebaseJobDispatcher/app/build.gradle
+++ b/S10.03-Exercise-FirebaseJobDispatcher/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.example.android.sunshine"
@@ -28,7 +28,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.0.1'
     compile 'com.android.support:preference-v7:25.0.1'
 
-    // TODO (1) Add the FirebaseJobDispatcher dependency to the project
+    // DONE (1) Add the FirebaseJobDispatcher dependency to the project
+    compile 'com.firebase:firebase-jobdispatcher:0.8.5'
 
     // Instrumentation dependencies use androidTestCompile
     // (as opposed to testCompile for local unit tests run in the JVM)
