--- a/S11.01-Exercise-NewListItemLayout/app/build.gradle
+++ b/S11.01-Exercise-NewListItemLayout/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.example.android.sunshine"
@@ -25,10 +25,11 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.1.0'
 
-    compile 'com.android.support:recyclerview-v7:25.0.1'
-    compile 'com.android.support:preference-v7:25.0.1'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.android.support:preference-v7:25.1.0'
 
-//  TODO (1) Add the ConstraintLayout dependency to your project
+//  DONE (1) Add the ConstraintLayout dependency to your project
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     compile 'com.firebase:firebase-jobdispatcher:0.5.0'
 
