--- a/S11.03-Exercise-DetailLayoutAndDataBinding/app/build.gradle
+++ b/S11.03-Exercise-DetailLayoutAndDataBinding/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.example.android.sunshine"
@@ -18,7 +18,10 @@ android {
         }
     }
 
-//  TODO (1) Enable databinding
+//  DONE (1) Enable databinding
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
