--- a/S12.02-Exercise-Styles/app/build.gradle
+++ b/S12.02-Exercise-Styles/app/build.gradle
@@ -2,11 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
-
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.example.android.sunshine"
-        minSdkVersion 10
+        minSdkVersion 11
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -17,21 +16,18 @@ android {
             minifyEnabled false
         }
     }
-
     dataBinding.enabled = true
+    productFlavors {
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.1.0'
-
     compile 'com.android.support:recyclerview-v7:25.0.1'
     compile 'com.android.support:preference-v7:25.0.1'
-
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta3'
-
     compile 'com.firebase:firebase-jobdispatcher:0.5.0'
-
     // Instrumentation dependencies use androidTestCompile
     // (as opposed to testCompile for local unit tests run in the JVM)
     androidTestCompile 'junit:junit:4.12'
