--- a/S12.02-Exercise-Styles/gradle/wrapper/gradle-wrapper.properties
+++ b/S12.02-Exercise-Styles/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Jan 06 09:57:11 PST 2017
+#Sun Jan 21 16:41:33 MSK 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.3-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
